tests/machine/x/ocaml/group_by.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by.ml", line 32, characters 4-10:
32 |   ) people;
         ^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 32):
  30 |       let cur = try List.assoc key !__groups0 with Not_found -> [] in
  31 |       __groups0 := (key, person :: cur) :: List.remove_assoc key !__groups0;
  32 |   ) people;
  33 |   let __res0 = ref [] in
  34 |   List.iter (fun (gKey,gItems) ->
